tests/mm0_mmu/fail/bad-sort4231.mmu
-- bad modifier order
(sort s4231 free strict provable pure)